# Developer-Site

./: .env  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  \  docker-compose.dev.yml  docker-compose.yml  doppler.yaml  jest.config.js  jest.config.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml  docker-image.yml  test.yml
__mocks__/: global-mocks.js
__tests__/: HomepagePage.test.js  PostsPage.test.js
ansible/: config.yaml  deploy_site.yaml
api/backend/: app.py
argo/: dev-site.yaml
charts/: index.yaml
charts/dev-site/: Chart.yaml  dev-site-1.0.0.tgz  values.yaml
k8s/: substitute.sh
k8s/templates/: doppler-secrets.yaml  frontend-configmap.template.yaml  frontend-deployment.template.yaml  frontend-deployment.yaml  frontend-service.yaml
lib/: UtilFunctions.tsx
public/: index.html
public/images/: 8bC.png~  8bguts.jpg-autosave.kra  8bpython.png~  8btech.jpg-autosave.kra  8bvr.png-autosave.kra  8bvr.png~
src/: App.js  App.tsx  Layout.js  Layout.tsx  Pages.tsx  constants.js  constants.ts  index.css  index.js
src/about/: About.js
src/common/: CardPost.tsx  CurrentTheme.tsx  Footer.js  Footer.tsx  Homepage.js  Homepage.tsx  NavItem.js  NavItem.tsx  Navbar.js  Navbar.tsx  Posts.tsx  ProjectTypes.ts  Setup.js  SiteNavbar.js  Social.js  Social.tsx  SocialsModal.tsx  WEBSITE.md  WorkingOn.js  WorkingOn.tsx  index.ts  loading.tsx
src/components/: Block.tsx  BookstackRecent.js  CurrentlyWorkingInformation.tsx  Discord.js  (+13 more)
tests/: HomepagePage.test.js
(+110 files in other folders)
